// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertItem should render a single Alert item with displayStatus = Buzz, value = 5, and warning = success. 1`] = `
<Alert
  closeLabel="Close alert"
  show={true}
  transition={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "appear": false,
        "in": false,
        "mountOnEnter": false,
        "timeout": 300,
        "unmountOnExit": false,
      },
      "displayName": "Fade",
      "render": [Function],
    }
  }
  variant="success"
>
  <Container
    fluid={false}
  >
    <Row
      noGutters={false}
    >
      <Col
        className="display-status"
        xs={6}
      >
        Buzz
      </Col>
      <Col
        className="text-right font-weight-bold h2"
      >
        5
      </Col>
    </Row>
  </Container>
</Alert>
`;

exports[`AlertItem should render a single Alert item with displayStatus = FIZZBUZZ!, value = 15, and warning = danger. 1`] = `
<Alert
  closeLabel="Close alert"
  show={true}
  transition={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "appear": false,
        "in": false,
        "mountOnEnter": false,
        "timeout": 300,
        "unmountOnExit": false,
      },
      "displayName": "Fade",
      "render": [Function],
    }
  }
  variant="danger"
>
  <Container
    fluid={false}
  >
    <Row
      noGutters={false}
    >
      <Col
        className="display-status"
        xs={6}
      >
        FIZZBUZZ!
      </Col>
      <Col
        className="text-right font-weight-bold h2"
      >
        15
      </Col>
    </Row>
  </Container>
</Alert>
`;

exports[`AlertItem should render a single Alert item with displayStatus = Fizz, value = 3, and warning = variant. 1`] = `
<Alert
  closeLabel="Close alert"
  show={true}
  transition={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "appear": false,
        "in": false,
        "mountOnEnter": false,
        "timeout": 300,
        "unmountOnExit": false,
      },
      "displayName": "Fade",
      "render": [Function],
    }
  }
  variant="warning"
>
  <Container
    fluid={false}
  >
    <Row
      noGutters={false}
    >
      <Col
        className="display-status"
        xs={6}
      >
        Fizz
      </Col>
      <Col
        className="text-right font-weight-bold h2"
      >
        3
      </Col>
    </Row>
  </Container>
</Alert>
`;

exports[`DisplayAlerts should render DisplayAlerts alert for full range of numbers within given range(). 1`] = `
<TransitionGroup
  childFactory={[Function]}
  component="div"
>
  <Bounce
    key="99"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="99"
      value={100}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="98"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="98"
      value={99}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="97"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="97"
      value={98}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="96"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="96"
      value={97}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="95"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="95"
      value={96}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="94"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="94"
      value={95}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="93"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="93"
      value={94}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="92"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="92"
      value={93}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="91"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="91"
      value={92}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="90"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="90"
      value={91}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="89"
    top={true}
  >
    <AlertItem
      displayStatus="FIZZBUZZ!"
      key="89"
      value={90}
      variant="danger"
    />
  </Bounce>
  <Bounce
    key="88"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="88"
      value={89}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="87"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="87"
      value={88}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="86"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="86"
      value={87}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="85"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="85"
      value={86}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="84"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="84"
      value={85}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="83"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="83"
      value={84}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="82"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="82"
      value={83}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="81"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="81"
      value={82}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="80"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="80"
      value={81}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="79"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="79"
      value={80}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="78"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="78"
      value={79}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="77"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="77"
      value={78}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="76"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="76"
      value={77}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="75"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="75"
      value={76}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="74"
    top={true}
  >
    <AlertItem
      displayStatus="FIZZBUZZ!"
      key="74"
      value={75}
      variant="danger"
    />
  </Bounce>
  <Bounce
    key="73"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="73"
      value={74}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="72"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="72"
      value={73}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="71"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="71"
      value={72}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="70"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="70"
      value={71}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="69"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="69"
      value={70}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="68"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="68"
      value={69}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="67"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="67"
      value={68}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="66"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="66"
      value={67}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="65"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="65"
      value={66}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="64"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="64"
      value={65}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="63"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="63"
      value={64}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="62"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="62"
      value={63}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="61"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="61"
      value={62}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="60"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="60"
      value={61}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="59"
    top={true}
  >
    <AlertItem
      displayStatus="FIZZBUZZ!"
      key="59"
      value={60}
      variant="danger"
    />
  </Bounce>
  <Bounce
    key="58"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="58"
      value={59}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="57"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="57"
      value={58}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="56"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="56"
      value={57}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="55"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="55"
      value={56}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="54"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="54"
      value={55}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="53"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="53"
      value={54}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="52"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="52"
      value={53}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="51"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="51"
      value={52}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="50"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="50"
      value={51}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="49"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="49"
      value={50}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="48"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="48"
      value={49}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="47"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="47"
      value={48}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="46"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="46"
      value={47}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="45"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="45"
      value={46}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="44"
    top={true}
  >
    <AlertItem
      displayStatus="FIZZBUZZ!"
      key="44"
      value={45}
      variant="danger"
    />
  </Bounce>
  <Bounce
    key="43"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="43"
      value={44}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="42"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="42"
      value={43}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="41"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="41"
      value={42}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="40"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="40"
      value={41}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="39"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="39"
      value={40}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="38"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="38"
      value={39}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="37"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="37"
      value={38}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="36"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="36"
      value={37}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="35"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="35"
      value={36}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="34"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="34"
      value={35}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="33"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="33"
      value={34}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="32"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="32"
      value={33}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="31"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="31"
      value={32}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="30"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="30"
      value={31}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="29"
    top={true}
  >
    <AlertItem
      displayStatus="FIZZBUZZ!"
      key="29"
      value={30}
      variant="danger"
    />
  </Bounce>
  <Bounce
    key="28"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="28"
      value={29}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="27"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="27"
      value={28}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="26"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="26"
      value={27}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="25"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="25"
      value={26}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="24"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="24"
      value={25}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="23"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="23"
      value={24}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="22"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="22"
      value={23}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="21"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="21"
      value={22}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="20"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="20"
      value={21}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="19"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="19"
      value={20}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="18"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="18"
      value={19}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="17"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="17"
      value={18}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="16"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="16"
      value={17}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="15"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="15"
      value={16}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="14"
    top={true}
  >
    <AlertItem
      displayStatus="FIZZBUZZ!"
      key="14"
      value={15}
      variant="danger"
    />
  </Bounce>
  <Bounce
    key="13"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="13"
      value={14}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="12"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="12"
      value={13}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="11"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="11"
      value={12}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="10"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="10"
      value={11}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="9"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="9"
      value={10}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="8"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="8"
      value={9}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="7"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="7"
      value={8}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="6"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="6"
      value={7}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="5"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="5"
      value={6}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="4"
    top={true}
  >
    <AlertItem
      displayStatus="Buzz"
      key="4"
      value={5}
      variant="success"
    />
  </Bounce>
  <Bounce
    key="3"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="3"
      value={4}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="2"
    top={true}
  >
    <AlertItem
      displayStatus="Fizz"
      key="2"
      value={3}
      variant="warning"
    />
  </Bounce>
  <Bounce
    key="1"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="1"
      value={2}
      variant="secondary"
    />
  </Bounce>
  <Bounce
    key="0"
    top={true}
  >
    <AlertItem
      displayStatus={null}
      key="0"
      value={1}
      variant="secondary"
    />
  </Bounce>
</TransitionGroup>
`;

exports[`FizzBuzz should render the full component with default value in field, no alerts 1`] = `
<Container
  fluid={false}
>
  <Row
    noGutters={false}
  >
    <Col
      xs={6}
    >
      <Form
        inline={false}
        onSubmit={[Function]}
      >
        <InputGroup
          className="mb-3"
        >
          <FormControl
            onChange={[Function]}
            type="number"
            value={1}
          />
          <InputGroupAppend>
            <Button
              active={false}
              disabled={false}
              type="submit"
              variant="primary"
            >
              <FontAwesomeIcon
                alt="Calculate"
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      448,
                      512,
                      Array [],
                      "f1ec",
                      "M400 0H48C22.4 0 0 22.4 0 48v416c0 25.6 22.4 48 48 48h352c25.6 0 48-22.4 48-48V48c0-25.6-22.4-48-48-48zM128 435.2c0 6.4-6.4 12.8-12.8 12.8H76.8c-6.4 0-12.8-6.4-12.8-12.8v-38.4c0-6.4 6.4-12.8 12.8-12.8h38.4c6.4 0 12.8 6.4 12.8 12.8v38.4zm0-128c0 6.4-6.4 12.8-12.8 12.8H76.8c-6.4 0-12.8-6.4-12.8-12.8v-38.4c0-6.4 6.4-12.8 12.8-12.8h38.4c6.4 0 12.8 6.4 12.8 12.8v38.4zm128 128c0 6.4-6.4 12.8-12.8 12.8h-38.4c-6.4 0-12.8-6.4-12.8-12.8v-38.4c0-6.4 6.4-12.8 12.8-12.8h38.4c6.4 0 12.8 6.4 12.8 12.8v38.4zm0-128c0 6.4-6.4 12.8-12.8 12.8h-38.4c-6.4 0-12.8-6.4-12.8-12.8v-38.4c0-6.4 6.4-12.8 12.8-12.8h38.4c6.4 0 12.8 6.4 12.8 12.8v38.4zm128 128c0 6.4-6.4 12.8-12.8 12.8h-38.4c-6.4 0-12.8-6.4-12.8-12.8V268.8c0-6.4 6.4-12.8 12.8-12.8h38.4c6.4 0 12.8 6.4 12.8 12.8v166.4zm0-256c0 6.4-6.4 12.8-12.8 12.8H76.8c-6.4 0-12.8-6.4-12.8-12.8V76.8C64 70.4 70.4 64 76.8 64h294.4c6.4 0 12.8 6.4 12.8 12.8v102.4z",
                    ],
                    "iconName": "calculator",
                    "prefix": "fas",
                  }
                }
                inverse={false}
                listItem={false}
                mask={null}
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                swapOpacity={false}
                symbol={false}
                title=""
                transform={null}
              />
            </Button>
          </InputGroupAppend>
        </InputGroup>
        <p>
          Enter a number between 1 & 99 to determine if it is a factor of (divides evenly into) 3 or 5. Get a "Fizz" if by 3, "Buzz" if by 5, and "
          <strong>
            FIZZBUZZ
          </strong>
          " if both!
        </p>
        <p>
          This is a classic JS algorithm that I've been asked to write more than once during white boarding interviews. I have not remembered it yet.
           
          <span
            aria-label="grimmace"
            role="img"
          >
            😬
          </span>
        </p>
      </Form>
    </Col>
    <Col>
      <div
        style={
          Object {
            "border": "solid 1px #CCC",
            "borderRadius": "4px",
            "height": "32vmax",
            "overflow": "auto",
            "padding": "1rem",
          }
        }
      >
        <DisplayAlerts
          items={Array []}
        />
      </div>
    </Col>
  </Row>
</Container>
`;
